Fix image not being responsive on smaller screen size

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -109,9 +109,9 @@ footer {
 
 main {
   display: flex;
-  flex-direction: column;
   align-items: center;
   position: relative;
+  margin: 0 auto;
 }
 
 .image-placeholder {
